--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
-  <body style="backgroud-color:pink;">
+  <body style="background-color:pink;">
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
